# mootimer

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
crates/mootimer-client/: Cargo.toml
crates/mootimer-client/examples/: cleanup_tests.rs  create_profiles_and_tasks.rs  repro_fixes.rs  show_entries_with_tasks.rs  test_add_entry.rs  test_countdown.rs  test_countdown_completion.rs  test_entries.rs  test_persistent.rs  test_weekly_report.rs
crates/mootimer-client/src/: client.rs  error.rs  lib.rs  protocol.rs
crates/mootimer-core/: Cargo.toml
crates/mootimer-core/examples/: repro_csv.rs
crates/mootimer-core/src/: error.rs  git.rs  lib.rs
crates/mootimer-core/src/models/: config.rs  entry.rs  mod.rs  profile.rs  task.rs  timer.rs
crates/mootimer-core/src/storage/: config.rs  entry.rs  mod.rs  profile.rs  task.rs
crates/mootimer-daemon/: Cargo.toml
crates/mootimer-daemon/src/: event_manager.rs  events.rs  lib.rs  main.rs  mcp.rs
crates/mootimer-daemon/src/api/: config.rs  entry.rs  mod.rs  profile.rs  sync.rs  task.rs  timer.rs
crates/mootimer-daemon/src/config/: manager.rs  mod.rs
crates/mootimer-daemon/src/entry/: manager.rs  mod.rs
crates/mootimer-daemon/src/ipc/: connection.rs  mod.rs  protocol.rs  server.rs
crates/mootimer-daemon/src/profile/: manager.rs  mod.rs
crates/mootimer-daemon/src/sync/: manager.rs  mod.rs
crates/mootimer-daemon/src/task/: manager.rs  mod.rs
crates/mootimer-daemon/src/timer/: engine.rs  events.rs  manager.rs  mod.rs  tests.rs
crates/mootimer-daemon/tests/: rpc_integration.rs
crates/mootimer-jira/: Cargo.toml
crates/mootimer-jira/src/: auth.rs  client.rs  error.rs  lib.rs  types.rs
crates/mootimer-tui/: Cargo.toml
crates/mootimer-tui/src/: app.rs  main.rs
crates/mootimer-tui/src/ui/: big_text.rs  buttons.rs  confirmation.rs  cow.rs  dashboard.rs  entries.rs  helpers.rs  input.rs  kanban.rs  logs.rs  mod.rs  reports.rs  settings.rs  timers.rs  tomato.rs
