[workspace]
resolver = "2"
members = [
  "crates/mootimer-client",
  "crates/mootimer-core",
  "crates/mootimer-daemon",
  "crates/mootimer-tui",
]

[workspace.package]
version = "0.1.0"
authors = ["Marcin Paliwoda <paliwoda.marcin@zoho.com>"]
edition = "2024"
repository = "https://github.com/yourusername/mootimer"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
csv = "1.3"
git2 = "0.19"
keyring = "3.6"
mootimer-client = { path = "crates/mootimer-client" }
mootimer-core = { path = "crates/mootimer-core" }
mootimer-daemon = { path = "crates/mootimer-daemon" }
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.9", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
