[package]
name = "mootimer-jira"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mootimer-core.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
keyring.workspace = true

tokio = { workspace = true, features = ["macros"] }
base64 = "0.22"
